<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fractview</string>

    <!-- Strings for ui elements -->
    <string-array name="size_modes">
        <item>Screen Size</item>
        <item>Default Size</item>
        <item>Custom Size</item>
    </string-array>


    <string name="action_parameters">Parameters</string>
    <string name="action_add_bookmark">Add to Favorites</string>
    <string name="action_share">Share Image</string>
    <string name="action_save">Save Image</string>
    <string name="action_bookmarks">Favorites</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_keepratio">Keep Ratio</string>
    <string name="label_display_size">Reset to Display Size</string>
    <string name="size">Change Image Size</string>
    <string name="size_summ">Enter the size of the image</string>
    <string name="maxdepth_summ">Maximum Number of Iterations</string>
    <string name="maxdepth">Iteration Depth</string>
    <string name="parameters">Parameters</string>
    <string name="label_keep_as_default">Keep as Default Size</string>
    <string name="label_bitmap_fail">ERROR: Creating bitmap failed, reverting size to %1$d x %2$d</string>
    <string name="label_calc_finished">Calculation finished after %d ms</string>
    <string name="label_invalid_value">ERROR: Invalid value</string>
    <string name="label_new_default_size">New default size: %1$d x %2$d</string>
    <string name="resize">resize</string>
    <string name="point_moved">point moved</string>
    <string name="zoom">zoom</string>
    <string name="label_sety">Orthogonalize Y</string>
    <string name="scale_key">scale</string>
    <string name="scale">Scale</string>
    <string name="scale_summ">Linear mapping of current view</string>
    <string name="action_toggle_julia">Toggle Julia Set</string>
    <string name="fractaltype_summ">Select Type of Fractal</string>
    <string name="fractaltype">Fractal Type</string>
    <string name="fractaltype_key">fractaltype</string>
    <string name="action_editor">Editor</string>
    <string name="action_size">Image Size</string>
    <string name="action_edit_source">Edit Source</string>
    <string name="action_program">Program</string>
    <string name="action_save_program">Save</string>
    <string name="action_load_program">Load</string>
    <string name="action_compile">Compile</string>
    <string name="action_scale">Scale</string>
    <string name="action_load_palette">Load Palette</string>
    <string name="action_save_palette">Save Palette</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_demos">Demos</string>
    <string name="action_reset">Reset All</string>
    <string name="action_show_grid">Show Grid</string>
    <string name="label_default_size">Reset to Default</string>
    <string name="file_exists">File already exists</string>
    <string name="error_read_presets">Error reading presets:\n</string>
    <string name="action_set_wallpaper">Set as Wallpaper</string>
    <string name="action_save_image">Save Image</string>
    <string name="action_wallpaper">Set as wallpaper</string>
    <string name="action_paste_from_clipboard">Paste from Clipboard</string>
    <string name="action_copy_to_clipboard">Copy to Clipboard</string>
    <string name="rotation_lock">Rotation Lock</string>
    <string name="action_gui_settings">UI Settings</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="action_rename">Rename</string>
    <string name="action_import_collection">Import Collection</string>
    <string name="action_edit_prefix">Edit common prefix</string>
    <string name="action_select_prefix">Select all with common prefix</string>
    <string name="error_invalid_real_number">Invalid real number</string>
    <string name="nav_header_title">Fractview</string>
    <string name="parameters_header_title">Parameters</string>
    <string name="reset">Reset to Default</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="paste">Paste from Clipboard</string>
    <string name="set_value_to_center">Set to Center</string>
    <string name="set_center_to_origin">Set Center to Origin (0:0)</string>
    <string name="orthogonalize">Orthogonalize</string>
    <string name="closeDialog">Close</string>
    <string name="remove_view">Remove View</string>
    <string name="add_view">Add View</string>
    <string name="action_forward">Forward</string>
    <string name="merge_view">Merge Shared Parameters</string>

</resources>
