<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_demos"
          android:title="@string/action_demos"
          android:icon="@drawable/ic_collections_white_24dp"
        />
    <item android:id="@+id/action_favorites"
          android:icon="@drawable/ic_collections_bookmark_white_24dp"
          android:title="@string/action_bookmarks"
        />
    <item android:id="@+id/action_tutorial"
          android:title="@string/action_tutorial"
        />
    <!-- FIXME Separator -->
    <item android:id="@+id/action_add_fractal_view"
          android:title="@string/add_view"
        />
    <item android:id="@+id/action_remove_fractal_view"
          android:title="@string/remove_view"
        />
    <item android:id="@+id/action_add_favorite"
          android:title="@string/action_add_bookmark"
          android:icon="@drawable/ic_add_to_photos_white_24dp"
        />
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share_white_24dp"
        />
    <item android:id="@+id/action_copy_to_clipboard"
          android:title="@string/action_copy_to_clipboard"
          android:icon="@drawable/ic_content_copy_white_24dp"
        />
    <item android:id="@+id/action_paste_from_clipboard"
          android:title="@string/action_paste_from_clipboard"
          android:icon="@drawable/ic_content_paste_white_24dp"
        />
    <item android:id="@+id/action_size"
          android:title="@string/action_size"
          android:icon="@drawable/ic_photo_size_select_large_white_24dp"
        />
    <item android:id="@+id/action_gui_settings"
          android:title="@string/action_gui_settings"
        />
</menu>