<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- FIXME Separators and icons -->
    <item android:id="@+id/action_forward"
          android:title="@string/action_forward"
        />
    <item android:id="@+id/action_demos"
          android:title="@string/action_demos"
          android:icon="@android:drawable/ic_menu_share"
        />
    <item android:id="@+id/action_favorites"
          android:icon="@android:drawable/ic_menu_gallery"
          android:title="@string/action_bookmarks"
        />
    <item android:id="@+id/action_tutorial"
          android:title="@string/action_tutorial"
          android:icon="@android:drawable/ic_dialog_info"
        />
    <item android:id="@+id/action_add_fractal_view"
          android:title="@string/add_view"
          android:icon="@android:drawable/ic_menu_add"
        />
    <item android:id="@+id/action_merge_fractal_view"
          android:title="@string/merge_view"
        />
    <item android:id="@+id/action_remove_fractal_view"
          android:title="@string/remove_view"
          android:icon="@android:drawable/ic_menu_gallery"
        />
    <item android:id="@+id/action_add_favorite"
          android:title="@string/action_add_bookmark"
          android:icon="@android:drawable/ic_dialog_info"
        />
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@android:drawable/ic_menu_share"
        />
    <item android:id="@+id/action_size"
          android:title="@string/action_size"
          android:icon="@drawable/ic_photo_size_select_large_white_24dp"
        />
    <item android:id="@+id/action_gui_settings"
          android:title="@string/action_gui_settings"
        />
</menu>