<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share_white_24dp"
          android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_presets"
          android:title="@string/action_presets"
          android:icon="@drawable/ic_collections_white_24dp"
          android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_parameters"
          android:title="@string/action_parameters"
          android:icon="@drawable/ic_mode_edit_white_24dp"
          android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_add_favorite"
          android:title="@string/action_add_bookmark"
          android:icon="@drawable/ic_add_to_photos_white_24dp"
          android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_favorites"
        android:icon="@drawable/ic_collections_bookmark_white_24dp"
        android:title="@string/action_bookmarks"
        />
    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:icon="@drawable/ic_content_copy_white_24dp"
        />
    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:icon="@drawable/ic_content_paste_white_24dp"
        />
    <item android:id="@+id/action_size"
        android:title="@string/action_size"
        android:icon="@drawable/ic_photo_size_select_large_white_24dp"
        />
    <item android:id="@+id/action_show_grid"
          android:title="@string/action_show_grid"
          android:checkable="true"
        />
    <item android:id="@+id/action_rotation_lock"
          android:title="@string/rotation_lock"
          android:checkable="true"
          />
</menu>